feat(StorageRepository): add createAppDir() method